--- a/angular2/src/index.html
+++ b/angular2/src/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src='//cdn.tinymce.com/4/tinymce.min.js'></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
